--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <nav>
             <ul class="nav_links">
                 <li>
-                    <a href="#">Resource</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">Support</a>
+                    <a href="support.html">Support</a>
                 </li>
                 <li>
-                    <a href="#">Vaccine Providers</a>
+                    <a href="#">Vaccines</a>
                 </li>
             </ul>
         </nav>
-        <a href="#" class="cta"><button>Register</button></a>
+        <a href="registration.html" class="cta"><button>Register</button></a>
     </header>
     <section>
     <div class="question">
