--- a/support.html
+++ b/support.html
@@ -96,9 +96,11 @@
                 <div class="accordion-item-body">
                     <div class="accordion-item-body-content">
                         You can contact on any of the following details:
-                        a. Helpline Number: +91-11-23978046 (Toll free - 1075)
-                        b. Technical Helpline Number: 0120-4473222
-                        You may also contact the Vaccination Centre where you took vaccination, for advice.
+                        <ul style="padding-left: 1rem;">
+                        <li> Helpline Number: +91-11-23978046 (Toll free - 1075)</li>
+                        <li>Helpline Number: 0120-4473222</li> 
+                       <li>You may also contact the Vaccination Centre where you took vaccination, for advice.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
