vaccine providers added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="support.html">Support</a>
                 </li>
                 <li>
-                    <a href="#">Vaccines</a>
+                    <a href="vaccine.html">Vaccines</a>
                 </li>
             </ul>
         </nav>
