--- a/vaccine.html
+++ b/vaccine.html
@@ -38,68 +38,89 @@
         </div>
     </section>
     <section class="faq">
-        <h1 id="frequent">FAQ</h1>
+        <h1 id="frequent">Vaccine Providers</h1>
 
         <div class="accordion">
             <div class="accordion-item">
                 <div class="accordion-item-header">
-                    Where can I register for COVID-19 vaccination?
+                   COVAXIN
                 </div>
                 <div class="accordion-item-body">
                     <div class="accordion-item-body-content">
-                        You can log into the CoWIN portal and click on the “Register” tab to register for COVID-19
-                        vaccination.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Which age groups can register for vaccination on the VAX-WIN portal?
-                </div>
-                <div class="accordion-item-body">
-                    <div class="accordion-item-body-content">
-                        All citizens aged 18 years and above can register for vaccination.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Can I register for vaccination without Aadhaar card?
-                </div>
-                <div class="accordion-item-body">
-                    <div class="accordion-item-body-content">
-                        Yes, you can register on CoWIN portal using any of the following ID proofs:
                         <ul style="padding-left: 1rem;">
-                            <li>Aadhaar card</li>
-                            <li>Driving License</li>
-                            <li>PAN card</li>
-                            <li>Passport</li>
-                            <li>Voter ID (EPIC)</li>
+                            <li>COVAXIN® is included along with immune-potentiators, also known as vaccine adjuvants, which are added to the vaccine to increase and boost its immunogenicity.</li>
+                            <li>It is a 2-dose vaccination regimen given 28 days apart.</li>
+                            <li>It is a vaccine with no sub-zero storage, no reconstitution requirement, and ready to use liquid presentation in multi-dose vials, stable at 2-8oC.
+                            </li>
+                           <li>COVAXIN® demonstrated 77.8% vaccine efficacy against symptomatic COVID-19 disease, through evaluation of 130 confirmed cases, with 24 observed in the vaccine group versus 106 in the placebo group. The efficacy against severe symptomatic COVID-19 disease is shown to be 93.4%. The efficacy data demonstrates 63.6% protection against asymptomatic COVID-19.</li> 
+                           <li>How Given: Shot in the muscle of the upper arm</li>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <div class="accordion-item-header">
+                    COVISHIELD
+                </div>
+                <div class="accordion-item-body">
+                    <div class="accordion-item-body-content">
+                        <ul style="padding-left: 1rem;">
+                        <li>COVISHIELD™-   ChAdOx1 nCoV- 19 Corona Virus Vaccine (Recombinant)</li>
+                        <li>Each vaccine dose of 0.5 ml is withdrawn into a syringe for injection to be administered intramuscularly. Use a separate
+                            sterile needle and syringe for each individual. It is normal for liquid to remain in the vial after withdrawing the final dose. </li>
+                            <li>It is a 2-dose vaccination regimen given 84 days apart.</li>
+                            <li>How Given: Shot in the muscle of the upper arm</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <div class="accordion-item-header">
-                    Is there any registration charges to be paid?
+                    Pfizer-BioNTech
                 </div>
                 <div class="accordion-item-body">
                     <div class="accordion-item-body-content">
-                        No. There is no registration charge.
+                       
+                        <ul style="padding-left: 1rem;">
+                            <li>Number of Shots: 2 shots, 21 days apart</li>
+                            <li>How Given: Shot in the muscle of the upper arm</li>
+                            <li>Type of Vaccine: mRNA</li>
+                            <li>Manufacturer: Pfizer, Inc., and BioNTecht</li>
+                            <li>Does NOT Contain: Eggs, preservatives, latex, metals</li>
+                            <li>How Given: Shot in the muscle of the upper arm</li>
+                        </ul>
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <div class="accordion-item-header">
-                    Whom do I contact in case of side effects from vaccination?
+                    Johnson & Johnson's  / Janssen
                 </div>
                 <div class="accordion-item-body">
                     <div class="accordion-item-body-content">
-                        You can contact on any of the following details:
+                       <ul style="padding-left: 1rem;">
+                    <li>Name: JNJ-78436735</li>
+                    <li>Manufacturer: Janssen Pharmaceuticals Companies of Johnson & Johnson</li>
+                    <li>Viral Vector</li>
+                    <li>Number of Shots: 1 shot</li>
+                    <li>How Given: Shot in the muscle of the upper arm</li>
+                    </ul>
+
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <div class="accordion-item-header">
+                   Moderna
+                </div>
+                <div class="accordion-item-body">
+                    <div class="accordion-item-body-content">
+                        
                         <ul style="padding-left: 1rem;">
-                        <li> Helpline Number: +91-11-23978046 (Toll free - 1075)</li>
-                        <li>Helpline Number: 0120-4473222</li> 
-                       <li>You may also contact the Vaccination Centre where you took vaccination, for advice.</li>
+                        <li>Name: mRNA-1273</li>
+                        <li>Manufacturer: ModernaTX, Inc.</li> 
+                       <li>Type of Vaccine: mRNA</li>
+                       <li>Number of Shots: 2 shots, 28 days apart</li>
+                       <li>How Given: Shot in the muscle of the upper arm</li>
                         </ul>
                     </div>
                 </div>
