--- a/support.html
+++ b/support.html
@@ -25,7 +25,7 @@
                 </li>
             </ul>
         </nav>
-        <a href="#" class="cta"><button>Register</button></a>
+        <a href="registration.html" class="cta"><button>Register</button></a>
     </header>
     <section>
         <div class="question">
