overall design revamp

--- a/vaccine.html
+++ b/vaccine.html
@@ -10,33 +10,33 @@
 </head>
 
 <body>
-    <header>
-        <img src="/images/SharedScreenshot.png" alt="" class="logo" height="90">
+    <header class="nav">
+        <img src="/images/SharedScreenshot.png" alt="" class="logo" height="60">
         <nav>
             <ul class="nav_links">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="support.html">Support</a>
-                </li>
-                <li>
-                    <a href="vaccine.html">Vaccines</a>
-                </li>
+              <a href="index.html"> <li class="active">
+                    Home
+                </li></a>
+                <a href="support.html"><li>
+                   Support
+                </li></a>
+                <a href="vaccine.html"> <li>
+                    Vaccines
+                </li></a>
             </ul>
         </nav>
-        <a href="registration.html" class="cta"><button>Register</button></a>
+        <a href="registration.html" ><button>Register</button></a>
     </header>
     <section>
-        <div class="question">
-            <div>
-                <h1>Are You Protected aganist Covid-19 ?</h1>
-            </div>
-            <div>
-                <h1>क्या आप कोविड-19 से सुरक्षित हैं ?</h1>
-            </div>
+    <div class="question">
+        <div>
+            <h1>Are You Protected aganist Covid-19 ?</h1>
         </div>
-    </section>
+        <div>
+            <h1>क्या आप कोविड-19 से सुरक्षित हैं ?</h1>
+        </div>
+    </div>
+</section>
     <section class="faq">
         <h1 id="frequent">Vaccine Providers</h1>
 
