--- a/registration.html
+++ b/registration.html
@@ -1,92 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VAX-WIN</title>
-    <link rel="stylesheet" href="/css/registration.css">
-</head>
+    <link rel="stylesheet" href="/css/registration.css" />
+  </head>
 
-<body>
-    <header>
-        <img src="/images/SharedScreenshot.png" alt="" class="logo" height="90">
-        <nav>
-            <ul class="nav_links">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="support.html">Support</a>
-                </li>
-                <li>
-                    <a href="vaccine.html">Vaccines</a>
-                </li>
-            </ul>
-        </nav>
-        <a href="registration.html" class="cta"><button>Register</button></a>
+  <body>
+    <header class="nav">
+      <img src="/images/SharedScreenshot.png" alt="" class="logo" height="60" />
+      <nav>
+        <ul class="nav_links">
+          <a href="index.html"> <li class="active">Home</li></a>
+          <a href="support.html"><li>Support</li></a>
+          <a href="vaccine.html"> <li>Vaccines</li></a>
+        </ul>
+      </nav>
+      <a href="registration.html"><button>Register</button></a>
     </header>
     <section>
-        <div class="question">
-            <div>
-                <h1>Are You Protected aganist Covid-19 ?</h1>
-            </div>
-            <div>
-                <h1>क्या आप कोविड-19 से सुरक्षित हैं ?</h1>
-            </div>
+      <div class="question">
+        <div>
+          <h1>Are You Protected aganist Covid-19 ?</h1>
         </div>
+        <div>
+          <h1>क्या आप कोविड-19 से सुरक्षित हैं ?</h1>
+        </div>
+      </div>
     </section>
 
     <section class="registration">
-        <div id="reg">
-            <h3>Register for Vaccination</h3>
-            <p class="notes">
-                Your <strong>Photo ID</strong> will be verified at the time of your vaccination appointment. Please provide the details of the Photo ID you will carry for vaccination.
-            </p>
-            <form action="" method="post">
-               <div class="option">
-                <label for="pid">Photo id Proof</label>
+      <div id="reg">
+        <h3>Register for Vaccination</h3>
+        <p class="notes">
+          Your <strong>Photo ID</strong> will be verified at the time of your
+          vaccination appointment. Please provide the details of the Photo ID
+          you will carry for vaccination.
+        </p>
+        <form action="" method="post">
+          <div class="option">
+            <label for="pid">Photo id Proof</label>
 
-                <select name="pid" id="pid">
-                  <option value="Aadhar Card">Aadhar Card</option>
-                  <option value="Pan Card">Pan Card</option>
-                  <option value="Passport">Passport</option>
-                  <option value="Driving licence">Driving Licence</option>
-                  <option value="Voter Id">Voter Id</option>
-                </select>
-               </div>
-               <div class="number">
-                   <label for="pnum">Photo ID Number</label>
-                   <input type="text" name="pnum" id="pnum" placeholder="Photo ID Number">
-               </div>
-               <div class="name">
-                   <label for="pname">Name</label>
-                   <input type="text" name="pname" id="pname" placeholder="As shown in photo ID">
-               </div>
-               <div class="gender">
-                <p>Gender</p>
-                <label for="male">MALE
-                  <input type="radio" id="male" name="gender" value="MALE">
-                </label>
-                  <label for="female">FEMALE
-                  <input type="radio" id="female" name="=gender" value="FEMALE">
-                </label>
-                  
-               
-
-               </div>
-
-               <div class="year">
-                <label for="pyear">YEAR</label>
-                <input type="number" name="pyear" id="pyear" placeholder="in YYYY format">
+            <select name="pid" id="pid">
+              <option value="Aadhar Card">Aadhar Card</option>
+              <option value="Pan Card">Pan Card</option>
+              <option value="Passport">Passport</option>
+              <option value="Driving licence">Driving Licence</option>
+              <option value="Voter Id">Voter Id</option>
+            </select>
+          </div>
+          <div class="number">
+            <label for="pnum">Photo ID Number</label>
+            <input
+              type="text"
+              name="pnum"
+              id="pnum"
+              placeholder="Photo ID Number"
+            />
+          </div>
+          <div class="name">
+            <label for="pname">Name</label>
+            <input
+              type="text"
+              name="pname"
+              id="pname"
+              placeholder="As shown in photo ID"
+            />
+          </div>
+          <div class="gender">
+            <span>Gender</span>
+            <div class="radio">
+              <input type="radio" id="male" name="gender" value="MALE" />
+              <label for="male">MALE</label>
+              <input type="radio" id="female" name="gender" value="FEMALE" />
+              <label for="female">FEMALE</label>
+               
             </div>
+          </div>
 
-            <input type="button" id="sbutton" value="submit">
-            </form>
-        </div>
+          <div class="year">
+            <label for="pyear">DOB</label>
+            <input
+              type="date"
+              name="pyear"
+              id="pyear"
+              placeholder="in YYYY format"
+              min="1950-01-01"
+              max="2003-01-01"
+            />
+          </div>
+
+          <!-- city state -->
+
+          <div class="number">
+            <label for="city">City</label>
+            <input type="text" name="city" id="city" />
+          </div>
+          <div class="state">
+            <label for="state">State</label>
+            <select name="state" id="state" class="form-control">
+              <option value="Andhra Pradesh">Andhra Pradesh</option>
+              <option value="Andaman and Nicobar Islands">
+                Andaman and Nicobar Islands
+              </option>
+              <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+              <option value="Assam">Assam</option>
+              <option value="Bihar">Bihar</option>
+              <option value="Chandigarh">Chandigarh</option>
+              <option value="Chhattisgarh">Chhattisgarh</option>
+              <option value="Dadar and Nagar Haveli">
+                Dadar and Nagar Haveli
+              </option>
+              <option value="Daman and Diu">Daman and Diu</option>
+              <option value="Delhi">Delhi</option>
+              <option value="Lakshadweep">Lakshadweep</option>
+              <option value="Puducherry">Puducherry</option>
+              <option value="Goa">Goa</option>
+              <option value="Gujarat">Gujarat</option>
+              <option value="Haryana">Haryana</option>
+              <option value="Himachal Pradesh">Himachal Pradesh</option>
+              <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+              <option value="Jharkhand">Jharkhand</option>
+              <option value="Karnataka">Karnataka</option>
+              <option value="Kerala">Kerala</option>
+              <option value="Madhya Pradesh">Madhya Pradesh</option>
+              <option value="Maharashtra">Maharashtra</option>
+              <option value="Manipur">Manipur</option>
+              <option value="Meghalaya">Meghalaya</option>
+              <option value="Mizoram">Mizoram</option>
+              <option value="Nagaland">Nagaland</option>
+              <option value="Odisha">Odisha</option>
+              <option value="Punjab">Punjab</option>
+              <option value="Rajasthan">Rajasthan</option>
+              <option value="Sikkim">Sikkim</option>
+              <option value="Tamil Nadu">Tamil Nadu</option>
+              <option value="Telangana">Telangana</option>
+              <option value="Tripura">Tripura</option>
+              <option value="Uttar Pradesh">Uttar Pradesh</option>
+              <option value="Uttarakhand">Uttarakhand</option>
+              <option value="West Bengal">West Bengal</option>
+            </select>
+          </div>
+
+          <input type="button" id="sbutton" value="submit" />
+        </form>
+      </div>
     </section>
-   
-</body>
-
+  </body>
 </html>
