--- a/support.html
+++ b/support.html
@@ -1,131 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VAX-WIN</title>
-    <link rel="stylesheet" href="/css/support.css">
-</head>
+    <link rel="stylesheet" href="/css/support.css" />
+  </head>
 
-<body>
-    <header>
-        <img src="/images/SharedScreenshot.png" alt="" class="logo" height="90">
-        <nav>
-            <ul class="nav_links">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="support.html">Support</a>
-                </li>
-                <li>
-                    <a href="vaccine.html">Vaccines</a>
-                </li>
-            </ul>
-        </nav>
-        <a href="registration.html" class="cta"><button>Register</button></a>
+  <body>
+    <header class="nav">
+      <img src="/images/SharedScreenshot.png" alt="" class="logo" height="60" />
+      <nav>
+        <ul class="nav_links">
+          <a href="index.html"> <li class="active">Home</li></a>
+          <a href="support.html"><li>Support</li></a>
+          <a href="vaccine.html"> <li>Vaccines</li></a>
+        </ul>
+      </nav>
+      <a href="registration.html"><button>Register</button></a>
     </header>
     <section>
-        <div class="question">
-            <div>
-                <h1>Are You Protected aganist Covid-19 ?</h1>
-            </div>
-            <div>
-                <h1>क्या आप कोविड-19 से सुरक्षित हैं ?</h1>
-            </div>
+      <div class="question">
+        <div>
+          <h1>Are You Protected aganist Covid-19 ?</h1>
         </div>
+        <div>
+          <h1>क्या आप कोविड-19 से सुरक्षित हैं ?</h1>
+        </div>
+      </div>
     </section>
     <section class="faq">
-        <h1 id="frequent">FAQ</h1>
+      <h1 id="frequent">FAQ</h1>
 
-        <div class="accordion">
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Where can I register for COVID-19 vaccination?
-                </div>
-                <div class="accordion-item-body">
-                    <div class="accordion-item-body-content">
-                        You can log into the CoWIN portal and click on the “Register” tab to register for COVID-19
-                        vaccination.
-                    </div>
-                </div>
+      <div class="accordion">
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            Where can I register for COVID-19 vaccination?
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              You can log into the CoWIN portal and click on the “Register” tab
+              to register for COVID-19 vaccination.
             </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Which age groups can register for vaccination on the VAX-WIN portal?
-                </div>
-                <div class="accordion-item-body">
-                    <div class="accordion-item-body-content">
-                        All citizens aged 18 years and above can register for vaccination.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Can I register for vaccination without Aadhaar card?
-                </div>
-                <div class="accordion-item-body">
-                    <div class="accordion-item-body-content">
-                        Yes, you can register on CoWIN portal using any of the following ID proofs:
-                        <ul style="padding-left: 1rem;">
-                            <li>Aadhaar card</li>
-                            <li>Driving License</li>
-                            <li>PAN card</li>
-                            <li>Passport</li>
-                            <li>Voter ID (EPIC)</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Is there any registration charges to be paid?
-                </div>
-                <div class="accordion-item-body">
-                    <div class="accordion-item-body-content">
-                        No. There is no registration charge.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-item-header">
-                    Whom do I contact in case of side effects from vaccination?
-                </div>
-                <div class="accordion-item-body">
-                    <div class="accordion-item-body-content">
-                        You can contact on any of the following details:
-                        <ul style="padding-left: 1rem;">
-                        <li> Helpline Number: +91-11-23978046 (Toll free - 1075)</li>
-                        <li>Helpline Number: 0120-4473222</li> 
-                       <li>You may also contact the Vaccination Centre where you took vaccination, for advice.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            Which age groups can register for vaccination on the VAX-WIN portal?
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              All citizens aged 18 years and above can register for vaccination.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            Can I register for vaccination without Aadhaar card?
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              Yes, you can register on CoWIN portal using any of the following
+              ID proofs:
+              <ul style="padding-left: 1rem">
+                <li>Aadhaar card</li>
+                <li>Driving License</li>
+                <li>PAN card</li>
+                <li>Passport</li>
+                <li>Voter ID (EPIC)</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            Is there any registration charges to be paid?
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              No. There is no registration charge.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            Whom do I contact in case of side effects from vaccination?
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              You can contact on any of the following details:
+              <ul style="padding-left: 1rem">
+                <li>Helpline Number: +91-11-23978046 (Toll free - 1075)</li>
+                <li>Helpline Number: 0120-4473222</li>
+                <li>
+                  You may also contact the Vaccination Centre where you took
+                  vaccination, for advice.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script>
-        const accordionItemHeaders = document.querySelectorAll(".accordion-item-header");
+      const accordionItemHeaders = document.querySelectorAll(
+        ".accordion-item-header"
+      );
 
-        accordionItemHeaders.forEach(accordionItemHeader => {
-            accordionItemHeader.addEventListener("click", event => {
-
-
-                accordionItemHeader.classList.toggle("active");
-                const accordionItemBody = accordionItemHeader.nextElementSibling;
-                if (accordionItemHeader.classList.contains("active")) {
-                    accordionItemBody.style.maxHeight = accordionItemBody.scrollHeight + "px";
-                }
-                else {
-                    accordionItemBody.style.maxHeight = 0;
-                }
-
-            });
+      accordionItemHeaders.forEach((accordionItemHeader) => {
+        accordionItemHeader.addEventListener("click", (event) => {
+          accordionItemHeader.classList.toggle("active");
+          const accordionItemBody = accordionItemHeader.nextElementSibling;
+          if (accordionItemHeader.classList.contains("active")) {
+            accordionItemBody.style.maxHeight =
+              accordionItemBody.scrollHeight + "px";
+          } else {
+            accordionItemBody.style.maxHeight = 0;
+          }
         });
+      });
     </script>
-</body>
-
+  </body>
 </html>
