--- a/registration.html
+++ b/registration.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VAX-WIN</title>
     <link rel="stylesheet" href="/css/registration.css" />
+    <link
+      rel="icon"
+      href="images/icons8-syringe-with-a-drop-of-blood-48.png"
+      type="image"
+      sizes="16x16"
+    />
   </head>
 
   <body>
