hover setting changed

--- a/support.html
+++ b/support.html
@@ -19,8 +19,8 @@
       <img src="/images/SharedScreenshot.png" alt="" class="logo" height="60" />
       <nav>
         <ul class="nav_links">
-          <a href="index.html"> <li class="active">Home</li></a>
-          <a href="support.html"><li>Support</li></a>
+          <a href="index.html"> <li>Home</li></a>
+          <a href="support.html"><li class="active">Support</li></a>
           <a href="vaccine.html"> <li>Vaccines</li></a>
         </ul>
       </nav>
