--- a/vaccine.html
+++ b/vaccine.html
@@ -15,13 +15,13 @@
         <img src="/images/SharedScreenshot.png" alt="" class="logo" height="60">
         <nav>
             <ul class="nav_links">
-              <a href="index.html"> <li class="active">
+              <a href="index.html"> <li >
                     Home
                 </li></a>
                 <a href="support.html"><li>
                    Support
                 </li></a>
-                <a href="vaccine.html"> <li>
+                <a href="vaccine.html"> <li class="active">
                     Vaccines
                 </li></a>
             </ul>
