insights using python anywhere added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="nav">
-        <img src="/images/SharedScreenshot.png" alt="" class="logo" height="60">
+        <img src="/images/SharedSc reenshot.png" alt="" class="logo" height="60">
         <nav>
             <ul class="nav_links">
               <a href="index.html"> <li class="active">
@@ -25,6 +25,9 @@
                 </li></a>
                 <a href="vaccine.html"> <li>
                     Vaccines
+                </li></a>
+                <a href="https://vaxwin.pythonanywhere.com/insights/" target="_blank"> <li>
+                    Insights
                 </li></a>
             </ul>
         </nav>
