--- a/registration.html
+++ b/registration.html
@@ -22,6 +22,10 @@
           <a href="index.html"> <li>Home</li></a>
           <a href="support.html"><li>Support</li></a>
           <a href="vaccine.html"> <li>Vaccines</li></a>
+          <a href="https://vaxwin.pythonanywhere.com/insights/" target="_blank"> <li>
+            Insights
+        </li></a>
+        </li></a>
         </ul>
       </nav>
       <a href="registration.html"><button>Register</button></a>
