--- a/vaccine.html
+++ b/vaccine.html
@@ -24,6 +24,9 @@
                 <a href="vaccine.html"> <li class="active">
                     Vaccines
                 </li></a>
+                <a href="https://vaxwin.pythonanywhere.com/insights/" target="_blank"> <li>
+                    Insights
+                </li></a>
             </ul>
         </nav>
         <a href="registration.html" ><button>Register</button></a>
