--- a/support.html
+++ b/support.html
@@ -22,6 +22,9 @@
           <a href="index.html"> <li>Home</li></a>
           <a href="support.html"><li class="active">Support</li></a>
           <a href="vaccine.html"> <li>Vaccines</li></a>
+          <a href="https://vaxwin.pythonanywhere.com/insights/" target="_blank"> <li>
+            Insights
+        </li></a>
         </ul>
       </nav>
       <a href="registration.html"><button>Register</button></a>
